# hapi-pipelines

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  dump_views.sh  pyproject.toml  requirements.txt
.config/: pre-commit-config.yaml  ruff.toml
.github/workflows/: db_export.yaml  publish.yaml  run-python-tests.yaml
database/: admin1.hash  admin2.hash  hapi_db.pg_restore  humanitarian_needs.hash  location.hash  operational_presence.hash  population.hash
documentation/: main.md  pydoc-markdown.yaml
src/hapi/pipelines/: _version.py
tests/: test_hapi_patch.py  test_main.py  test_mappings.py  test_parse_tags.py  test_population.py  test_process_config_defaults.py  test_process_config_defaults.yaml
tests/fixtures/input/: afghanistan-acled-conflict-data.json  afghanistan-humanitarian-needs-overview.json  afghanistan-mpi.json  afghanistan-who-does-what-where-january-to-march-2023.json  afghanistan-who-does-what-where-january-to-march-2024.json  afghanistan-who-does-what-where-july-to-september-2023.json  afghanistan_food_prices.csv  burkina-faso-acled-conflict-data.json  burkina-faso-mpi.json  cadre-harmonise.json  chad-humanitarian-needs-overview.json  cod-ps-afg.json  cod-ps-bfa.json  cod-ps-mli.json  cod-ps-nga.json  cod-ps-tcd.json  conflict_event_afg_civilian_targeting_afghanistan_hrp_civilian_targeting_events_and_fatalities_by_month_year.xlsx  conflict_event_afg_demonstration_afghanistan_hrp_demonstration_events_by_month_year.xlsx  conflict_event_afg_political_violence_afghanistan_hrp_political_violence_events_and_fatalities_by_month_year.xlsx  conflict_event_bfa_demonstration_burkina_faso_hrp_demonstration_events_by_month_year.xlsx  conflict_event_gtm_civilian_targeting_guatemala_civilian_targeting_events_and_fatalities_by_month_year.xlsx  conflict_event_gtm_demonstration_guatemala_demonstration_events_by_month_year.xlsx  conflict_event_gtm_political_violence_guatemala_political_violence_events_and_fatalities_by_month_year.xlsx  download-hno-data-afg.csv  download-hno-data-gtm.csv  download-hno-data-mli.csv  download-hno-data-nga.csv  food_security_ch_1sxsircxhxmzce0pwafcht-whjbdi9uqoefesubilgc4-export-format-csv-gid-2037574879.csv  food_security_ch_2pacx-1vsfbwvsu3fka743vvhtgf-pigkyh7zhy-np7dzgev9-a6yu7vtcewhblm56aul1iifrfv5ubvvjvt7b-pub-gid-1040329566-single-true-output-csv.csv  food_security_ch_cadre_harmonise_caf_ipc.xlsx  fts-requirements-and-funding-data-for-afghanistan.json  fts-requirements-and-funding-data-for-burkina-faso.json  fts-requirements-and-funding-data-for-ukraine.json  funding_afg_fts_requirements_funding_afg.csv  funding_bfa_fts_requirements_funding_bfa.csv  funding_ukr_fts_requirements_funding_ukr.csv  global-coordination-groups-beta.json  global-wfp-food-prices.json  (+47 more)
(+96 files in other folders)
